refs #2976 - Fix wrong color in smis.css for the primary-button text color

--- a/assets/default/css/smis.css
+++ b/assets/default/css/smis.css
@@ -56,7 +56,7 @@ a:visited {
 
 .button-primary {
 	font-size: 18px;
-	color: #ffffff;
+	color: #ffffff !important;
 	border: none;
 	border-radius: 2px;
 	background-color: #40c4ff;
